@@ -19,9 +19,8 @@ module Devise
 
         base.class_eval do
           validates_presence_of   :email
-          validates_uniqueness_of :email, :allow_blank => true
-          validates_format_of     :email, :with => EMAIL_REGEX, :allow_blank => true,
-                                          :scope => authentication_keys[1..-1]
+          validates_uniqueness_of :email, :scope => authentication_keys[1..-1], :allow_blank => true
+          validates_format_of     :email, :with  => EMAIL_REGEX, :allow_blank => true
 
           with_options :if => :password_required? do |v|
             v.validates_presence_of     :password
